# domino

./: .gitreview  DominoClient.py  DominoServer.py  INFO  INFO.yaml  LICENSE  README.md  buildpy  domino-cli.py  domino-cli.thrift  domino.thrift  domino_cli.py  domino_conf.py  requirements.txt  setup.cfg
docs/: conf.yaml
docs/configguide/: featureconfig.rst  index.rst  installation.rst
docs/design/: architecture.rst  index.rst  use-cases.rst
docs/development/overview/: feature.overview.rst  index.rst
docs/installationprocedure/: index.rst  installation.instructions.rst
docs/manuals/: index.rst  usingwithheat.rst
docs/platformoverview/: index.rst  platformoverview.rst
docs/release/: index.rst
docs/release/configguide/: featureconfig.rst  index.rst
docs/userguide/: .api-documentation.rst.swp  .index.rst.swp  api-documentation.rst  feature.userguide.rst  index.rst  overview.rst
lib/dominoCLI/: DominoClientCLI-remote  DominoClientCLI.py  __init__.py  ttypes.py
lib/dominoRPC/: Communication-remote  Communication.py  __init__.py  constants.py  ttypes.py
lib/mapper/: __init__.py  label.py
lib/partitioner/: __init__.py  constants.py  partitioner.py
lib/util/: __init__.py  miscutil.py  netutil.py
tests/: run.sh  run_multinode.sh  run_on_remotenodes.sh  test_partitioner.py
tests/refdata/: test1.ref  test1_client1.ref  test1_client2.ref
tests/testkeys/: id_rsa
tosca-templates/: tacker_tosca_openwrt_vnfd.yaml  test_tosca_nfv_sample.yaml  test_tosca_nfv_sample2.yaml  test_tosca_nfv_sample3.yaml  tosca_helloworld_nfv.yaml
(+8 files in other folders)
