[metadata]
name = domino
version = 5
home-page = https://wiki.opnfv.org/display/domino/Domino+Home

[files]
packages = .
scripts =
    tests/run_multinode.sh
    tests/run_on_remotenodes.sh
    tests/run.sh

[entry_points]
console_scripts =
    DominoClient = DominoClient:main
    DominoServer = DominoServer:main
    domino_cli = domino_cli:main
    test_partitioner = tests.test_partitioner:main
